alignment fixed for answered

--- a/src/components/SearchResult/SearchResult.module.css
+++ b/src/components/SearchResult/SearchResult.module.css
@@ -106,7 +106,7 @@
 }
 .userInfo
 {
-    margin-left: 55px;
+    margin-left: 3px;
     margin-top: 0px;
 }
 
@@ -171,4 +171,5 @@ img
     font-family: 'Poppins', 'Lato', sans-serif;
     padding:5px;
     font-weight:normal;
+    float:left;
 }
